fixed tracy photo on mobile

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -132,7 +132,7 @@ h5 {
     }
 
     #tracy {
-        width: 80%;
+        width: 65%;
     }
 
     #tth {
